--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,10 @@
 	</div>
 
   <%= yield %> <!--! end of #container -->
+	
+	<footer>
+		© 2013 Rodrigo Gomes Dias | <a href="#">Privacidade</a>
+	</footer>
 
 
   <%= javascript_include_tag "application" %>
