--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 <div class="search-bar">
 	<div class="search-bar-blue marge">
 		<div class="logo">
-			<a href="#"><%=image_tag("logo.png", :alt => "Busca Contagem")%></a>
+			<a id="home" href="#"><%=image_tag("logo.png", :alt => "Busca Contagem")%></a>
 		</div>
 		<div class="input-search">
-			<input name="search" value="" placeholder="O que deseja encontrar?"><!--
-			--><button type="submit" class="button-go">Pesquisar</button>
+			<input id="search-input" name="search" value="" placeholder="O que deseja encontrar?"><!--
+			--><button id="search-button" type="submit" class="button-go">Pesquisar</button>
 		</div>
 		<div class="home-buttons">
 			<button class="button sobre">Sobre</button>
