--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,5 +59,13 @@
     s.parentNode.insertBefore(g,s)}(document,'script'));
   </script>
 
+
+	<script type="text/javascript">
+	  $(function() {
+	    window.router = new Site.Routers.SearchesRouter();
+	    Backbone.history.start();
+	  });
+	</script>
+
 </body>
 </html>
