--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,3 +16,16 @@
 		© 2013 Rodrigo Gomes Dias | <a href="#">Privacidade</a>
 	</div>
 </div>
+
+<div class="content">
+	<div id="result-search" class="content-search marge">
+		
+		<!-- <% 15.times.each do |i| %>
+		<div class="anuncio free">
+			<div class="tel">(31) 3395-1239</div>
+			<div class="title">Teste</div>
+		</div>
+		<% end %> -->
+		
+	</div>
+</div>
